<resources>
    <string name="app_name">FBS Money</string>

    <string name="slide1">Frugal Business: Instant money moves made simple. Send, receive, request – effortlessly</string>
    <string name="slide2">Receive a Mastercard debit card for online and in-person use.</string>
    <string name="slide3">Let\'s get you started in just a few steps.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fbs_money">FBS Money</string>
    <string name="todo">TODO</string>
    <string name="fbs_moneyy">FBS Money</string>
    <string name="log_in">Log in</string>
    <string name="upload_photo">Upload photo</string>
    <string name="sign_up">Sign up</string>
    <string name="todoc">TODO</string>
    <string name="sign_up_to_fbs_money">Sign up to FBS Money</string>
    <string name="enter_your_email_we_will_text_you_a_verification_code">Enter your email, we will text you a verification code</string>
    <string name="individual_user">Individual User</string>
    <string name="commercial_user">Commercial User</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_passwordu">Confirm password</string>
    <string name="continueu">Continue</string>
    <string name="or_continue_with">Or Continue with</string>
    <string name="fully_registers_to_fbs_money">Fully Registers to FBS Money</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="city_name">City name</string>
    <string name="zip_postcode">Zip/Postcode</string>
    <string name="zip_code">Zip code</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_your_identity">Verify your identity</string>
    <string name="we_need_a_valid_document_to_verify_your_identity">We need a valid document to verify your identity.</string>
    <string name="identity_card">Identity Card</string>
    <string name="take_photo">Take photo</string>
    <string name="verify_identity_card">Verify Identity Card</string>
    <string name="position_the_front_of_your_document_in_the_frame">Position the front of your document in the frame</string>
    <string name="ensure_lighting_is_good_and_lettering_is_clear">Ensure lighting is good and lettering is clear</string>
    <string name="submit_photo">Submit photo</string>
    <string name="retake_photo">Retake photo</string>
    <string name="position_the_back_of_your_document_in_the_frame">Position the back of your document in the frame</string>
    <string name="ensure_lighting_is_good_and_lettering_is_clearr">ensure_lighting_is_good_and_lettering_is_clear</string>
    <string name="verification_pending">Verification Pending</string>
    <string name="your_identity_verification_is_in_progress_this_may_take_a_short_while">Your identity verification is in progress. This may take a short while.</string>
    <string name="start_using_app">Start Using App</string>
    <string name="congratulations_your_identity_has_been_successfully_verified">Congratulations! Your identity has been successfully verified.</string>
    <string name="verified_successfully">Verified Successfully</string>
    <string name="oops_it_seems_there_was_an_issue_during_the_verification_process">Oops! It seems there was an issue during the verification process.</string>
    <string name="verification_error">Verification Error</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_the_email_you_registered_with">Enter the email you registered with.</string>
    <string name="log_in_to_fbs_money">Log in to FBS Money</string>
    <string name="code_has_expired">Code has expired</string>
    <string name="would_you_like_to_send_another_code">Would you like to send another code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="at_lease_8_characters">At lease 8 characters</string>
    <string name="contains_a_symbol_or_a_number">Contains a symbol or a number</string>
    <string name="congratulations">Congratulations</string>
    <string name="your_account_has_successfully_been_created_please_wait_24_hours_while_we_verify_your_account">Your account has successfully been created. Please wait 24 hours while we verify your account.</string>


    <string-array name="noting">
        <item>EUR</item>
        <item>Example</item>
    </string-array>

    <string-array name="noting2">
        <item>Select</item>
        <item>Example</item>
    </string-array>

    <string-array name="noting3">
        <item>USD</item>
        <item>INR</item>
        <item>Example</item>
    </string-array>

    <string-array name="noting4">
        <item>Access Bank</item>
        <item>Stanbic IBTC</item>
        <item>First Bank of Nigeria</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>