<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/verify_id"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:src="@drawable/line"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/expired"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_has_expired"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_bold"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/would_you_like_to_send_another_code"
        android:textColor="@color/dark_gray"
        android:fontFamily="@font/inter_regular"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_code"
        android:background="@drawable/button_background_blue"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:id="@+id/resend"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"/>

</LinearLayout>