<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.CreatePassword"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/left_back"
                    android:background="@drawable/circle"
                    android:layout_margin="20dp"
                    android:onClick="back12"/>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textAlignment="textStart"
                android:text="Create your password"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_bold"
                android:layout_margin="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_medium"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    app:boxStrokeColor="@color/blue"
                    app:hintTextColor="@color/blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/at_lease_8_characters"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/inter_regular"
                    android:drawableStart="@drawable/check"
                    android:drawablePadding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contains_a_symbol_or_a_number"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/inter_regular"
                    android:drawableStart="@drawable/check"
                    android:drawablePadding="5dp"/>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continueu"
        android:background="@drawable/button_background_blue"
        android:textColor="@color/white"
        android:layout_marginBottom="40dp"
        android:onClick="password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>