<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".signup.FrontPhoto1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/circle"
                    android:onClick="back2"
                    android:src="@drawable/left_back" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/position_the_front_of_your_document_in_the_frame"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/ensure_lighting_is_good_and_lettering_is_clear"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <androidx.camera.view.PreviewView
                android:id="@+id/pre"
                android:layout_width="match_parent"
                android:layout_height="400dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/upload_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/button_bg_white"
                    android:onClick="submit_btn"
                    android:text="@string/submit_photo"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/take_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/button_bg_blue"
                    android:onClick="retake_btn"
                    android:text="@string/retake_photo"
                    android:textColor="@color/blue" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>